[gd_scene load_steps=3 format=3 uid="uid://cpy1qoooa0rx5"]

[ext_resource type="Script" path="res://Scripts/mpManager.gd" id="1_ld1ev"]
[ext_resource type="PackedScene" uid="uid://btbp10700wojh" path="res://Scenes/player.tscn" id="2_jbuy4"]

[node name="MPManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ld1ev")
player_scene = ExtResource("2_jbuy4")

[node name="MainMenu" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 438.0
offset_top = 209.0
offset_right = -438.0
offset_bottom = -208.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Title" type="Label" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HostButton" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="AdressEntry" type="LineEdit" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "IP Adress"
alignment = 1

[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
